<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AllTicketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/text_view_style"
                android:gravity="center"
                android:text="@string/heading"
                android:textColor="@color/blue"
                android:textSize="40dp"
                android:textStyle="bold" />
            <LinearLayout
                android:background="@drawable/linear_layout_style"
                android:layout_width="wrap_content"
                android:padding="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_text_view"
                    android:fontFamily="@font/zen_regular"
                    android:textSize="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_user" />

                <TextView
                    android:id="@+id/phone_text_view"
                    android:fontFamily="@font/zen_regular"
                    android:textSize="15dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_user" />
            </LinearLayout>

        </LinearLayout>



        <LinearLayout

            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zen_regular"
                android:textSize="40dp"
                android:text="@string/all_ticket_heading"/>

            <ListView
                android:layout_marginTop="60dp"
                android:background="@drawable/linear_layout_style"
                android:padding="2dp"
                android:id="@+id/simpleListView"
                android:layout_gravity="center"
                android:layout_width="350dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>