<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity"
    android:theme="@style/newTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_view_style"
            android:fontFamily="@font/zen_regular"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/heading"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="50dp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/textView3"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_regular"
            android:textSize="40dp"
            android:text="@string/authorize_heading" />

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="60dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textSize="15dp"/>

            <EditText
                android:padding="2dp"
                android:background="@drawable/item_style"
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="12"
                android:hint="телефон"
                android:textSize="15dp"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextPassword"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:background="@drawable/item_style"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:hint="пароль"
                android:layout_marginLeft="13dp"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_authorize"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="ShowAllTicket"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:backgroundTint="@color/blue"
                android:layout_weight="1"
                android:text="@string/authorize_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>